# pktfmt

./: README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
pktfmt/: __init__.py  __main__.py  cli.py  parser.py  protocols.py  renderer.py
