[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pktfmt"
version = "0.3.1"
description = "Generate RFC-style ASCII packet diagrams from field definitions"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["packet", "diagram", "ascii", "rfc", "network", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: System :: Networking",
]

[project.scripts]
pktfmt = "pktfmt.cli:main"

[tool.setuptools.packages.find]
where = ["."]
